fix the color contrast on coverage highlight

--- a/app/assets/stylesheets/rationale.less
+++ b/app/assets/stylesheets/rationale.less
@@ -31,7 +31,7 @@
   }
   .eval-coverage{
     background-color: @blue-lightest;
-    color: @brand-primary;
+    color: @blue-darker;
   }
   .panel {
     padding: 5px 0;
